fix overlap

--- a/src/pages/media.css
+++ b/src/pages/media.css
@@ -14,7 +14,7 @@
     position: fixed;
     width: 70%;
     top: 2%;
-    left: 25%;
+    right: 2%;
 
     overflow: auto;
     max-height: 100vh;
@@ -56,7 +56,7 @@
         position: fixed;
         width: 65%;
         top: 2%;
-        left: 25%;
+        right: 2%;
     
         overflow: auto;
         max-height: 100vh;
